--- a/bibliography.bib
+++ b/bibliography.bib
@@ -42,37 +42,24 @@
 }
 
 @article{ha_augmented_2016,
-	title = {Augmented {Reality} in {Medicine}},
-	volume = {36},
-	issn = {1738-429X},
-	url = {https://doi.org/10.7599/hmr.2016.36.4.242},
-	doi = {10.7599/hmr.2016.36.4.242},
-	abstract = {Ha HG, et al. Hanyang Med Rev. 2016 Nov;36(4):242-247. https://doi.org/10.7599/hmr.2016.36.4.242},
-	language = {English},
-	number = {4},
-	urldate = {2019-04-02},
-	journal = {Hanyang Medical Reviews},
-	author = {Ha, Ho-Gun and Hong, Jaesung},
-	month = nov,
-	year = {2016},
-	pages = {242--247},
-	file = {Full Text PDF:C\:\\Users\\anton\\Zotero\\storage\\ZHXDVXEN\\Ha und Hong - 2016 - Augmented Reality in Medicine.pdf:application/pdf;Snapshot:C\:\\Users\\anton\\Zotero\\storage\\JH53EZ9A\\search.html:text/html}
+	title={Augmented reality in medicine},
+  author={Ha, Ho-Gun and Hong, Jaesung},
+  journal={Hanyang Medical Reviews},
+  volume={36},
+  number={4},
+  pages={242--247},
+  year={2016}
 }
 
 @article{birkfellner_head-mounted_2002,
-	title = {A head-mounted operating binocular for augmented reality visualization in medicine - design and initial evaluation},
-	volume = {21},
-	issn = {0278-0062},
-	doi = {10.1109/TMI.2002.803099},
-	abstract = {Computer-aided surgery (CAS), the intraoperative application of biomedical visualization techniques, appears to be one of the most promising fields of application for augmented reality (AR), the display of additional computer-generated graphics over a real-world scene. Typically a device such as a head-mounted display (HMD) is used for AR. However, considerable technical problems connected with AR have limited the intraoperative application of HMDs up to now. One of the difficulties in using HMDs is the requirement for a common optical focal plane for both the realworld scene and the computer-generated image, and acceptance of the HMD by the user in a surgical environment. In order to increase the clinical acceptance of AR, we have adapted the Varioscope (Life Optics, Vienna), a miniature, cost-effective head-mounted operating binocular, for AR. In this paper, we present the basic design of the modified HMD, and the method and results of an extensive laboratory study for photogrammetric calibration of the Varioscope's computer displays to a real-world scene. In a series of 16 calibrations with varying zoom factors and object distances, mean calibration error was found to be 1.24 /spl plusmn/ 0.38 pixels or 0.12 /spl plusmn/ 0.05 mm for a 640 /spl times/ 480 display. Maximum error accounted for 3.33 /spl plusmn/ 1.04 pixels or 0.33 /spl plusmn/ 0.12 mm. The location of a position measurement probe of an optical tracking system was transformed to the display with an error of less than 1 mm in the real world in 56\% of all cases. For the remaining cases, error was below 2 mm. We conclude that the accuracy achieved in our experiments is sufficient for a wide range of CAS applications.},
-	number = {8},
-	journal = {IEEE Transactions on Medical Imaging},
-	author = {Birkfellner, W. and Figl, M. and Huber, K. and Watzinger, F. and Wanschitz, F. and Hummel, J. and Hanel, R. and Greimel, W. and Homolka, P. and Ewers, R. and Bergmann, H.},
-	month = aug,
-	year = {2002},
-	keywords = {Application software, augmented reality, Augmented reality, augmented reality visualization, Biomedical computing, biomedical equipment, Biomedical optical imaging, calibration, Calibration, clinical acceptance, common optical focal plane, Computer displays, Computer Graphics, computer-aided surgery, computer-generated image, Content addressable storage, Depth Perception, Equipment Design, Equipment Failure Analysis, focal planes, head-mounted operating binocular, helmet mounted displays, Imaging, Three-Dimensional, Layout, mean calibration error, medical image processing, medical instrumentation, Microscopy, Video, Microsurgery, object distances, optical tracking, optical tracking system, photogrammetric calibration, photogrammetry, position measurement, real-world scene, Reproducibility of Results, Sensitivity and Specificity, Subtraction Technique, surgery, Surgery, Surgical Equipment, User-Computer Interface, varioscope, Video Recording, Visualization, zoom factors},
-	pages = {991--997},
-	file = {IEEE Xplore Abstract Record:C\:\\Users\\anton\\Zotero\\storage\\KYX2ISQ5\\1076043.html:text/html;IEEE Xplore Full Text PDF:C\:\\Users\\anton\\Zotero\\storage\\DSCV9QSN\\Birkfellner et al. - 2002 - A head-mounted operating binocular for augmented r.pdf:application/pdf}
+  title={A head-mounted operating binocular for augmented reality visualization in medicine-design and initial evaluation},
+  author={Birkfellner, Wolfgang and Figl, Michael and Huber, Klaus and Watzinger, Franz and Wanschitz, Felix and Hummel, Johann and Hanel, Rudolf and Greimel, Wolfgang and Homolka, Peter and Ewers, Rolf and others},
+  journal={IEEE Transactions on Medical Imaging},
+  volume={21},
+  number={8},
+  pages={991--997},
+  year={2002},
+  publisher={IEEE}
 }
 
 @inproceedings{koller_real-time_1997,
@@ -143,14 +130,14 @@
 }
 
 @misc{milgram_taxonomy_1994,
-	title = {A {Taxonomy} of {Mixed} {Reality} {Visual} {Displays}},
-	url = {https://search.ieice.org/bin/summary.php?id=e77-d_12_1321},
-	abstract = {This paper focuses on Mixed Reality (MR) visual displays, a particular subset of Virtual Reality (VR) related technologies that involve the merging of real and virtual worlds somewhere along the {\textless}cd02148.gif{\textgreater}virtuality continuum},
-	urldate = {2019-04-02},
-	author = {MILGRAM, Paul and KISHINO, Fumio},
-	month = dec,
-	year = {1994},
-	file = {Snapshot:C\:\\Users\\anton\\Zotero\\storage\\3UTF6PRY\\summary.html:text/html}
+	  title={A taxonomy of mixed reality visual displays},
+  author={Milgram, Paul and Kishino, Fumio},
+  journal={IEICE TRANSACTIONS on Information and Systems},
+  volume={77},
+  number={12},
+  pages={1321--1329},
+  year={1994},
+  publisher={The Institute of Electronics, Information and Communication Engineers}
 }
 
 @article{wild_robust_2016,
@@ -241,39 +228,24 @@ Augmented reality tools like X-Scope® may be helpful for controlling maxillary 
 }
 
 @inproceedings{rae_neurosurgical_2018,
-	title = {Neurosurgical burr hole placement using the {Microsoft} {HoloLens}},
-	volume = {10576},
-	url = {https://www.spiedigitallibrary.org/conference-proceedings-of-spie/10576/105760T/Neurosurgical-burr-hole-placement-using-the-Microsoft-HoloLens/10.1117/12.2293680.short},
-	doi = {10.1117/12.2293680},
-	abstract = {PURPOSE: Tracked navigation systems are generally impractical in bedside neurosurgical procedures, such as a twist-drill crainiostomy for the removal of a subdural hematoma, where the use of navigation could optimize the placement of the drill in relation to the underlying fluid. We use the Microsoft HoloLens to display a hologram floating in the patient’s head to mark a burr hole on the skull. METHODS: A 3D model of the head, hematoma and burr hole is created from CT and imported to the HoloLens. The hologram is interactively registered to the patient and the burr hole is marked on the skull. 3D Slicer, Unity, and Visual Studio were used for software development. The system was tested by 6 inexperienced and 1 experienced users. They each performed 6 registrations on phantoms with fiducial markers placed at 3 plausible burr hole locations on each side of the head. Registration accuracy was determined by measuring the distance between the holographic and physical markers. RESULTS: Inexperienced users placed 98\% of the markers within the clinically acceptable range of 10 mm in an average time of 4:46 min. The experienced user placed 100\% of the markers within the acceptable range in an average time of 2:52 min. CONCLUSION: It is feasible to mark a neurosurgical burr hole location with clinically acceptable accuracy using the Microsoft HoloLens, within an acceptable length of time. This technology may also prove useful for procedures that require higher accuracy of drill location and drain trajectory such as the placement of external ventricular drains.},
-	urldate = {2019-04-03},
-	booktitle = {Medical {Imaging} 2018: {Image}-{Guided} {Procedures}, {Robotic} {Interventions}, and {Modeling}},
-	publisher = {International Society for Optics and Photonics},
-	author = {Rae, Emily and Lasso, Andras and Holden, Matthew S. and Morin, Evelyn and Levy, Ron and Fichtinger, Gabor},
-	month = mar,
-	year = {2018},
-	pages = {105760T},
-	file = {Full Text PDF:C\:\\Users\\anton\\Zotero\\storage\\UWVWYQ5T\\Rae et al. - 2018 - Neurosurgical burr hole placement using the Micros.pdf:application/pdf}
+	  title={Neurosurgical burr hole placement using the Microsoft HoloLens},
+  author={Rae, Emily and Lasso, Andras and Holden, Matthew S and Morin, Evelyn and Levy, Ron and Fichtinger, Gabor},
+  booktitle={Medical Imaging 2018: Image-Guided Procedures, Robotic Interventions, and Modeling},
+  volume={10576},
+  pages={105760T},
+  year={2018},
+  organization={International Society for Optics and Photonics}
 }
 
 @article{pratt_through_2018,
-	title = {Through the {HoloLens}™ looking glass: augmented reality for extremity reconstruction surgery using 3D vascular models with perforating vessels},
-	volume = {2},
-	issn = {2509-9280},
-	shorttitle = {Through the {HoloLens}™ looking glass},
-	url = {https://doi.org/10.1186/s41747-017-0033-2},
-	doi = {10.1186/s41747-017-0033-2},
-	abstract = {Precision and planning are key to reconstructive surgery. Augmented reality (AR) can bring the information within preoperative computed tomography angiography (CTA) imaging to life, allowing the surgeon to ‘see through’ the patient’s skin and appreciate the underlying anatomy without making a single incision. This work has demonstrated that AR can assist the accurate identification, dissection and execution of vascular pedunculated flaps during reconstructive surgery. Separate volumes of osseous, vascular, skin, soft tissue structures and relevant vascular perforators were delineated from preoperative CTA scans to generate three-dimensional images using two complementary segmentation software packages. These were converted to polygonal models and rendered by means of a custom application within the HoloLens™ stereo head-mounted display. Intraoperatively, the models were registered manually to their respective subjects by the operating surgeon using a combination of tracked hand gestures and voice commands; AR was used to aid navigation and accurate dissection. Identification of the subsurface location of vascular perforators through AR overlay was compared to the positions obtained by audible Doppler ultrasound. Through a preliminary HoloLens-assisted case series, the operating surgeon was able to demonstrate precise and efficient localisation of perforating vessels.},
-	language = {en},
-	number = {1},
-	urldate = {2019-04-03},
-	journal = {European Radiology Experimental},
-	author = {Pratt, Philip and Ives, Matthew and Lawton, Graham and Simmons, Jonathan and Radev, Nasko and Spyropoulou, Liana and Amiras, Dimitri},
-	month = jan,
-	year = {2018},
-	keywords = {Augmented reality, Computed tomography, HoloLens, Three-dimensional (3D) reconstruction, Vascular pedicle flap},
-	pages = {2},
-	file = {Springer Full Text PDF:C\:\\Users\\anton\\Zotero\\storage\\PXREHLY4\\Pratt et al. - 2018 - Through the HoloLens™ looking glass augmented rea.pdf:application/pdf}
+	  title={Through the HoloLens™ looking glass: augmented reality for extremity reconstruction surgery using 3D vascular models with perforating vessels},
+  author={Pratt, Philip and Ives, Matthew and Lawton, Graham and Simmons, Jonathan and Radev, Nasko and Spyropoulou, Liana and Amiras, Dimitri},
+  journal={European radiology experimental},
+  volume={2},
+  number={1},
+  pages={2},
+  year={2018},
+  publisher={Springer}
 }
 
 @article{shi_[preliminary_2018,
@@ -309,18 +281,14 @@ Augmented reality tools like X-Scope® may be helpful for controlling maxillary 
 }
 
 @article{frantz_augmenting_2018,
-	title = {Augmenting {Microsoft}'s {HoloLens} with vuforia tracking for neuronavigation},
-	volume = {5},
-	issn = {2053-3713},
-	doi = {10.1049/htl.2018.5079},
-	abstract = {Major hurdles for Microsoft's HoloLens as a tool in medicine have been accessing tracking data, as well as a relatively high-localisation error of the displayed information; cumulatively resulting in its limited use and minimal quantification. The following work investigates the augmentation of HoloLens with the proprietary image processing SDK Vuforia, allowing integration of data from its front-facing RGB camera to provide more spatially stable holograms for neuronavigational use. Continuous camera tracking was able to maintain hologram registration with a mean perceived drift of 1.41 mm, as well as a mean sub 2-mm surface point localisation accuracy of 53\%, all while allowing the researcher to walk about a test area. This represents a 68\% improvement for the later and a 34\% improvement for the former compared with a typical HoloLens deployment used as a control. Both represent a significant improvement on hologram stability given the current state-of-the-art, and to the best of the authors knowledge are the first example of quantified measurements when augmenting hologram stability using data from the RGB sensor.},
-	number = {5},
-	journal = {Healthcare Technology Letters},
-	author = {Frantz, T. and Jansen, B. and Duerinck, J. and Vandemeulebroucke, J.},
-	year = {2018},
-	keywords = {medical image processing, augmenting hologram stability, cameras, continuous camera tracking, front-facing RGB camera, high-localisation error, hologram registration, holography, image registration, mean perceived drift, Microsoft HoloLens augmentation, minimal quantification, neuronavigation, object tracking, proprietary image processing SDK Vuforia, size 1.41 mm, spatially stable holograms, surface point localisation accuracy, tracking data, typical HoloLens deployment, vuforia tracking, Marker Tracking},
-	pages = {221--225},
-	file = {IEEE Xplore Abstract Record:C\:\\Users\\anton\\Zotero\\storage\\LZMPIRSQ\\8527707.html:text/html;IEEE Xplore Full Text PDF:C\:\\Users\\anton\\Zotero\\storage\\983NQRQL\\Frantz et al. - 2018 - Augmenting Microsoft's HoloLens with vuforia track.pdf:application/pdf}
+	  title={Augmenting Microsoft's HoloLens with vuforia tracking for neuronavigation},
+  author={Frantz, Taylor and Jansen, Bart and Duerinck, Johnny and Vandemeulebroucke, Jef},
+  journal={Healthcare technology letters},
+  volume={5},
+  number={5},
+  pages={221--225},
+  year={2018},
+  publisher={IET}
 }
 
 @inproceedings{gasques_rodrigues_exploring_2017,
@@ -454,10 +422,14 @@ Augmented reality tools like X-Scope® may be helpful for controlling maxillary 
 }
 
 @misc{noauthor_openhelp_nodate,
-	title = {{OpenHELP} ({Heidelberg} laparoscopy phantom): development of an open-source surgical evaluation and training tool {\textbar} {SpringerLink}},
-	url = {https://link.springer.com/article/10.1007/s00464-015-4094-0},
-	urldate = {2019-04-04},
-	file = {OpenHELP (Heidelberg laparoscopy phantom) develop.pdf:C\:\\Users\\anton\\Zotero\\storage\\IQEWWYQS\\OpenHELP (Heidelberg laparoscopy phantom) develop.pdf:application/pdf;OpenHELP (Heidelberg laparoscopy phantom)\: development of an open-source surgical evaluation and training tool | SpringerLink:C\:\\Users\\anton\\Zotero\\storage\\7NLX2N7I\\s00464-015-4094-0.html:text/html}
+	  title={OpenHELP (Heidelberg laparoscopy phantom): development of an open-source surgical evaluation and training tool},
+  author={Kenngott, HG and W{\"u}nscher, JJ and Wagner, M and Preukschas, A and Wekerle, AL and Neher, P and Suwelack, S and Speidel, S and Nickel, F and Oladokun, D and others},
+  journal={Surgical endoscopy},
+  volume={29},
+  number={11},
+  pages={3338--3347},
+  year={2015},
+  publisher={Springer}
 }
 
 @article{paredes_vuforia_nodate,
@@ -502,32 +474,25 @@ Augmented reality tools like X-Scope® may be helpful for controlling maxillary 
 }
 
 @article{billinghurst_survey_2015,
-	title = {A {Survey} of {Augmented} {Reality}},
-	volume = {8},
-	issn = {1551-3955, 1551-3963},
-	url = {https://www.nowpublishers.com/article/Details/HCI-049},
-	doi = {10.1561/1100000049},
-	abstract = {A Survey of Augmented Reality},
-	language = {English},
-	number = {2-3},
-	urldate = {2019-04-25},
-	journal = {Foundations and Trends® in Human–Computer Interaction},
-	author = {Billinghurst, Mark and Clark, Adrian and Lee, Gun},
-	month = mar,
-	year = {2015},
-	keywords = {Marker Tracking},
-	pages = {73--272},
-	file = {Eingereichte Version:C\:\\Users\\anton\\Zotero\\storage\\HGVPBWVL\\Billinghurst et al. - 2015 - A Survey of Augmented Reality.pdf:application/pdf;Snapshot:C\:\\Users\\anton\\Zotero\\storage\\W7K9ZUJE\\HCI-049.html:text/html}
+	  title={A survey of augmented reality},
+  author={Billinghurst, Mark and Clark, Adrian and Lee, Gun and others},
+  journal={Foundations and Trends{\textregistered} in Human--Computer Interaction},
+  volume={8},
+  number={2-3},
+  pages={73--272},
+  year={2015},
+  publisher={Now Publishers, Inc.}
 }
 
 @article{rabbi_survey_2013,
-	title = {A {Survey} on {Augmented} {Reality} {Challenges} and {Tracking} {Authors}},
-	language = {en},
-	author = {Rabbi, Ihsan and Ullah, Sehat},
-	year = {2013},
-	keywords = {Marker Tracking},
-	pages = {18},
-	file = {Rabbi und Ullah - 2013 - A Survey on Augmented Reality Challenges and Track.pdf:C\:\\Users\\anton\\Zotero\\storage\\32HXWZP6\\Rabbi und Ullah - 2013 - A Survey on Augmented Reality Challenges and Track.pdf:application/pdf}
+	  title={A survey on augmented reality challenges and tracking},
+  author={Rabbi, Ihsan and Ullah, Sehat},
+  journal={Acta graphica: znanstveni {\v{c}}asopis za tiskarstvo i grafi{\v{c}}ke komunikacije},
+  volume={24},
+  number={1-2},
+  pages={29--46},
+  year={2013},
+  publisher={Acta Graphica doo}
 }
 
 @article{afif_vision-based_nodate,
@@ -735,24 +700,14 @@ Conclusion: Our spatially aware approach to transmission image visualization eff
 }
 
 @article{liebmann_pedicle_2019,
-	title = {Pedicle screw navigation using surface digitization on the {Microsoft} {HoloLens}},
-	volume = {14},
-	issn = {1861-6410, 1861-6429},
-	url = {http://link.springer.com/10.1007/s11548-019-01973-7},
-	doi = {10.1007/s11548-019-01973-7},
-	abstract = {Purpose In spinal fusion surgery, imprecise placement of pedicle screws can result in poor surgical outcome or may seriously harm a patient. Patient-speciﬁc instruments and optical systems have been proposed for improving precision through surgical navigation compared to freehand insertion. However, existing solutions are expensive and cannot provide in situ visualizations. Recent technological advancement enabled the production of more powerful and precise optical see-through head-mounted displays for the mass market. The purpose of this laboratory study was to evaluate whether such a device is sufﬁciently precise for the navigation of lumbar pedicle screw placement.
-Methods A novel navigation method, tailored to run on the Microsoft HoloLens, was developed. It comprises capturing of the intraoperatively reachable surface of vertebrae to achieve registration and tool tracking with real-time visualizations without the need of intraoperative imaging. For both surface sampling and navigation, 3D printable parts, equipped with ﬁducial markers, were employed. Accuracy was evaluated within a self-built setup based on two phantoms of the lumbar spine. Computed tomography (CT) scans of the phantoms were acquired to carry out preoperative planning of screw trajectories in 3D. A surgeon placed the guiding wire for the pedicle screw bilaterally on ten vertebrae guided by the navigation method. Postoperative CT scans were acquired to compare trajectory orientation (3D angle) and screw insertion points (3D distance) with respect to the planning.
-Results The mean errors between planned and executed screw insertion were 3.38◦ ±1.73◦ for the screw trajectory orientation and 2.77±1.46 mm for the insertion points. The mean time required for surface digitization was 125±27 s.
-Conclusions First promising results under laboratory conditions indicate that precise lumbar pedicle screw insertion can be achieved by combining HoloLens with our proposed navigation method. As a next step, cadaver experiments need to be performed to conﬁrm the precision on real patient anatomy.},
-	language = {en},
-	number = {7},
-	urldate = {2019-06-19},
-	journal = {International Journal of Computer Assisted Radiology and Surgery},
-	author = {Liebmann, Florentin and Roner, Simon and von Atzigen, Marco and Scaramuzza, Davide and Sutter, Reto and Snedeker, Jess and Farshad, Mazda and Fürnstahl, Philipp},
-	month = jul,
-	year = {2019},
-	pages = {1157--1165},
-	file = {Liebmann et al. - 2019 - Pedicle screw navigation using surface digitizatio.pdf:C\:\\Users\\anton\\Zotero\\storage\\M2V7PIQF\\Liebmann et al. - 2019 - Pedicle screw navigation using surface digitizatio.pdf:application/pdf}
+	  title={Pedicle screw navigation using surface digitization on the Microsoft HoloLens},
+  author={Liebmann, Florentin and Roner, Simon and von Atzigen, Marco and Scaramuzza, Davide and Sutter, Reto and Snedeker, Jess and Farshad, Mazda and F{\"u}rnstahl, Philipp},
+  journal={International journal of computer assisted radiology and surgery},
+  volume={14},
+  number={7},
+  pages={1157--1165},
+  year={2019},
+  publisher={Springer}
 }
 
 @article{andress_--fly_2018,
@@ -773,20 +728,13 @@ Conclusions First promising results under laboratory conditions indicate that pr
 }
 
 @inproceedings{salb_inpres_2003,
-	title = {{INPRES} (intraoperative presentation of surgical planning and simulation results): augmented reality for craniofacial surgery},
-	volume = {5006},
-	shorttitle = {{INPRES} (intraoperative presentation of surgical planning and simulation results)},
-	url = {https://www.spiedigitallibrary.org/conference-proceedings-of-spie/5006/0000/INPRES-intraoperative-presentation-of-surgical-planning-and-simulation-results/10.1117/12.474098.short},
-	doi = {10.1117/12.474098},
-	abstract = {In this paper we present recent developments and pre-clinical validation results of our approach for augmented reality (AR, for short) in craniofacial surgery. A commercial Sony Glasstron display is used for optical see-through overlay of surgical planning and simulation results with a patient inside the operation room (OR). For the tracking of the glasses, of the patient and of various medical instruments an NDI Polaris system is used as standard solution. A complementary inside-out navigation approach has been realized with a panoramic camera. This device is mounted on the head of the surgeon for tracking of fiducials placed on the walls of the OR. Further tasks described include the calibration of the head-mounted display (HMD), the registration of virtual objects with the real world and the detection of occlusions in the object overlay with help of two miniature CCD cameras. The evaluation of our work took place in the laboratory environment and showed promising results. Future work will concentrate on the optimization of the technical features of the prototype and on the development of a system for everyday clinical use.},
-	urldate = {2019-06-24},
-	booktitle = {Stereoscopic {Displays} and {Virtual} {Reality} {Systems} {X}},
-	publisher = {International Society for Optics and Photonics},
-	author = {Salb, Tobias and Brief, Jakob and Welzel, Thomas and Giesler, Bjoern and Hassfeld, Steffan and Muehling, Joachim and Dillmann, Ruediger},
-	month = may,
-	year = {2003},
-	pages = {453--460},
-	file = {Full Text PDF:C\:\\Users\\anton\\Zotero\\storage\\R32PUKGC\\Salb et al. - 2003 - INPRES (intraoperative presentation of surgical pl.pdf:application/pdf;Snapshot:C\:\\Users\\anton\\Zotero\\storage\\77VRIUH9\\12.474098.html:text/html}
+  title={INPRES (intraoperative presentation of surgical planning and simulation results): augmented reality for craniofacial surgery},
+  author={Salb, Tobias and Brief, Jakob and Welzel, Thomas and Giesler, Bjoern and Hassfeld, Steffan and Muehling, Joachim and Dillmann, Ruediger},
+  booktitle={Stereoscopic Displays and Virtual Reality Systems X},
+  volume={5006},
+  pages={453--460},
+  year={2003},
+  organization={International Society for Optics and Photonics}
 }
 
 @article{khor_augmented_2016,
@@ -809,20 +757,14 @@ Conclusions First promising results under laboratory conditions indicate that pr
 }
 
 @article{azuma_survey_1997,
-	title = {A {Survey} of {Augmented} {Reality}},
-	volume = {6},
-	issn = {1054-7460},
-	url = {https://doi.org/10.1162/pres.1997.6.4.355},
-	doi = {10.1162/pres.1997.6.4.355},
-	abstract = {This paper surveys the field of augmented reality (AR), in which 3D virtual objects are integrated into a 3D real environment in real time. It describes the medical, manufacturing, visualization, path planning, entertainment, and military applications that have been explored. This paper describes the characteristics of augmented reality systems, including a detailed discussion of the tradeoffs between optical and video blending approaches. Registration and sensing errors are two of the biggest problems in building effective augmented reality systems, so this paper summarizes current efforts to overcome these problems. Future directions and areas requiring further research are discussed. This survey provides a starting point for anyone interested in researching or using augmented reality.},
-	number = {4},
-	urldate = {2019-06-25},
-	journal = {Presence: Teleoperators and Virtual Environments},
-	author = {Azuma, Ronald T.},
-	month = aug,
-	year = {1997},
-	pages = {355--385},
-	file = {Full Text PDF:C\:\\Users\\anton\\Zotero\\storage\\HHXG5748\\Azuma - 1997 - A Survey of Augmented Reality.pdf:application/pdf;Snapshot:C\:\\Users\\anton\\Zotero\\storage\\ZLME4KAD\\pres.1997.6.4.html:text/html}
+	 title={A survey of augmented reality},
+  author={Azuma, Ronald T},
+  journal={Presence: Teleoperators \& Virtual Environments},
+  volume={6},
+  number={4},
+  pages={355--385},
+  year={1997},
+  publisher={MIT Press}
 }
 
 @misc{noauthor_ieice_nodate,
@@ -833,14 +775,14 @@ Conclusions First promising results under laboratory conditions indicate that pr
 }
 
 @misc{milgram_taxonomy_1994-1,
-	title = {A {Taxonomy} of {Mixed} {Reality} {Visual} {Displays}},
-	url = {https://search.ieice.org/bin/summary.php?id=e77-d_12_1321},
-	abstract = {This paper focuses on Mixed Reality (MR) visual displays, a particular subset of Virtual Reality (VR) related technologies that involve the merging of real and virtual worlds somewhere along the {\textless}cd02148.gif{\textgreater}virtuality continuum},
-	urldate = {2019-06-25},
-	author = {MILGRAM, Paul and KISHINO, Fumio},
-	month = dec,
-	year = {1994},
-	file = {Kishino - httpvered.rose.utoronto.capeoplepaul_dirIEIC.pdf:C\:\\Users\\anton\\Zotero\\storage\\9TEFMCDR\\Kishino - httpvered.rose.utoronto.capeoplepaul_dirIEIC.pdf:application/pdf;Snapshot:C\:\\Users\\anton\\Zotero\\storage\\8D2G38Z9\\summary.html:text/html}
+	  title={A taxonomy of mixed reality visual displays},
+  author={Milgram, Paul and Kishino, Fumio},
+  journal={IEICE TRANSACTIONS on Information and Systems},
+  volume={77},
+  number={12},
+  pages={1321--1329},
+  year={1994},
+  publisher={The Institute of Electronics, Information and Communication Engineers}
 }
 
 @article{noauthor_windows_nodate,
@@ -852,22 +794,17 @@ Conclusions First promising results under laboratory conditions indicate that pr
 @misc{varnauld_mixed_nodate,
 	title = {Mixed {Reality} documentation - {Mixed} {Reality}},
 	url = {https://docs.microsoft.com/en-us/windows/mixed-reality/},
-	abstract = {Learn to build mixed reality experiences for HoloLens and immersive headsets.},
-	language = {en-us},
 	urldate = {2019-06-25},
-	author = {Varnauld},
-	file = {Install the tools.pdf:C\:\\Users\\anton\\Zotero\\storage\\K968ERNH\\Install the tools.pdf:application/pdf;Snapshot:C\:\\Users\\anton\\Zotero\\storage\\DGJ873R6\\mixed-reality.html:text/html}
+	author = {Microsoft},
+	note = {Accessed: 2019-06-25}
 }
 
 @misc{bray_what_nodate,
+	author = {Microsoft},
 	title = {What is mixed reality? - {Mixed} {Reality}},
 	shorttitle = {What is mixed reality?},
 	url = {https://docs.microsoft.com/en-us/windows/mixed-reality/mixed-reality},
-	abstract = {This article defines mixed reality and demonstrates where simple AR and VR devices, as well as Windows Mixed Reality devices like Microsoft HoloLens and Windows Mixed Reality immersive headsets, sit along the mixed reality spectrum.},
-	language = {en-us},
-	urldate = {2019-06-25},
-	author = {Bray, Brandon and v-stdemo and McCulloch, Jesse and Schonning, Nick and Zeller, Matt},
-	file = {Snapshot:C\:\\Users\\anton\\Zotero\\storage\\Q7NDVIE6\\mixed-reality.html:text/html}
+	note = {Accessed: 2019-06-25}
 }
 
 @article{kishino_http://vered.rose.utoronto.ca/people/paul_dir/ieice94/ieice.htm_nodate,
@@ -878,24 +815,14 @@ Conclusions First promising results under laboratory conditions indicate that pr
 }
 
 @book{kenngott_mobile_2018,
-	title = {Mobile, real-time, and point-of-care augmented reality is robust, accurate, and feasible: a prospective pilot study},
-	volume = {32},
-	shorttitle = {Mobile, real-time, and point-of-care augmented reality is robust, accurate, and feasible},
-	abstract = {Background
-Augmented reality (AR) systems are currently being explored by a broad spectrum of industries, mainly for improving point-of-care access to data and images. Especially in surgery and especially for timely decisions in emergency cases, a fast and comprehensive access to images at the patient bedside is mandatory. Currently, imaging data are accessed at a distance from the patient both in time and space, i.e., at a specific workstation. Mobile technology and 3-dimensional (3D) visualization of radiological imaging data promise to overcome these restrictions by making bedside AR feasible.
-
-Methods
-In this project, AR was realized in a surgical setting by fusing a 3D-representation of structures of interest with live camera images on a tablet computer using marker-based registration. The intent of this study was to focus on a thorough evaluation of AR. Feasibility, robustness, and accuracy were thus evaluated consecutively in a phantom model and a porcine model. Additionally feasibility was evaluated in one male volunteer.
-
-Results
-In the phantom model (n = 10), AR visualization was feasible in 84\% of the visualization space with high accuracy (mean reprojection error ± standard deviation (SD): 2.8 ± 2.7 mm; 95th percentile = 6.7 mm). In a porcine model (n = 5), AR visualization was feasible in 79\% with high accuracy (mean reprojection error ± SD: 3.5 ± 3.0 mm; 95th percentile = 9.5 mm). Furthermore, AR was successfully used and proved feasible within a male volunteer.
-
-Conclusions
-Mobile, real-time, and point-of-care AR for clinical purposes proved feasible, robust, and accurate in the phantom, animal, and single-trial human model shown in this study. Consequently, AR following similar implementation proved robust and accurate enough to be evaluated in clinical trials assessing accuracy, robustness in clinical reality, as well as integration into the clinical workflow. If these further studies prove successful, AR might revolutionize data access at patient bedside.},
-	author = {Kenngott, Hannes and Amin Preukschas, Anas and Wagner, Martin and Nickel, Felix and Müller, Michael and Bellemann, Nadine and Stock, Christian and Fangerau, Markus and Radeleff, Boris and Kauczor, Hans-Ulrich and Meinzer, Hans-Peter and Maier-Hein, Lena and Peter Müller-Stich, Beat},
-	month = jun,
-	year = {2018},
-	doi = {10.1007/s00464-018-6151-y}
+	  title={Mobile, real-time, and point-of-care augmented reality is robust, accurate, and feasible: a prospective pilot study},
+  author={Kenngott, Hannes G{\"o}tz and Preukschas, Anas Amin and Wagner, Martin and Nickel, Felix and M{\"u}ller, Michael and Bellemann, Nadine and Stock, Christian and Fangerau, Markus and Radeleff, Boris and Kauczor, Hans-Ulrich and others},
+  journal={Surgical endoscopy},
+  volume={32},
+  number={6},
+  pages={2958--2967},
+  year={2018},
+  publisher={Springer}
 }
 
 @article{kenngott_mobile_2018-1,
@@ -974,11 +901,10 @@ Conclusions  Mobile, real-time, and point-of-care AR for clinical purposes pro
 }
 
 @article{szeliski_computer_nodate,
-	title = {Computer {Vision}: {Algorithms} and {Applications}},
-	language = {en},
-	author = {Szeliski, Richard},
-	pages = {979},
-	file = {Szeliski - Computer Vision Algorithms and Applications.pdf:C\:\\Users\\anton\\Zotero\\storage\\L83YS7C9\\Szeliski - Computer Vision Algorithms and Applications.pdf:application/pdf}
+	  title={Computer vision: algorithms and applications},
+  author={Szeliski, Richard},
+  year={2010},
+  publisher={Springer Science \& Business Media}
 }
 
 @misc{noauthor_doi:10.1016/j.ijom.2004.03.018_nodate,
@@ -1032,22 +958,14 @@ Conclusions  Mobile, real-time, and point-of-care AR for clinical purposes pro
 }
 
 @article{qian_comparison_2017,
-	title = {Comparison of optical see-through head-mounted displays for surgical interventions with object-anchored 2D-display},
-	volume = {12},
-	issn = {1861-6429},
-	url = {https://doi.org/10.1007/s11548-017-1564-y},
-	doi = {10.1007/s11548-017-1564-y},
-	abstract = {PurposeOptical see-through head-mounted displays (OST-HMD) feature an unhindered and instantaneous view of the surgery site and can enable a mixed reality experience for surgeons during procedures. In this paper, we present a systematic approach to identify the criteria for evaluation of OST-HMD technologies for specific clinical scenarios, which benefit from using an object-anchored 2D-display visualizing medical information.MethodsCriteria for evaluating the performance of OST-HMDs for visualization of medical information and its usage are identified and proposed. These include text readability, contrast perception, task load, frame rate, and system lag. We choose to compare three commercially available OST-HMDs, which are representatives of currently available head-mounted display technologies. A multi-user study and an offline experiment are conducted to evaluate their performance.ResultsStatistical analysis demonstrates that Microsoft HoloLens performs best among the three tested OST-HMDs, in terms of contrast perception, task load, and frame rate, while ODG R-7 offers similar text readability. The integration of indoor localization and fiducial tracking on the HoloLens provides significantly less system lag in a relatively motionless scenario.ConclusionsWith ever more OST-HMDs appearing on the market, the proposed criteria could be used in the evaluation of their suitability for mixed reality surgical intervention. Currently, Microsoft HoloLens may be more suitable than ODG R-7 and Epson Moverio BT-200 for clinical usability in terms of the evaluated criteria. To the best of our knowledge, this is the first paper that presents a methodology and conducts experiments to evaluate and compare OST-HMDs for their use as object-anchored 2D-display during interventions.},
-	language = {en},
-	number = {6},
-	urldate = {2019-08-08},
-	journal = {International Journal of Computer Assisted Radiology and Surgery},
-	author = {Qian, Long and Barthel, Alexander and Johnson, Alex and Osgood, Greg and Kazanzides, Peter and Navab, Nassir and Fuerst, Bernhard},
-	month = jun,
-	year = {2017},
-	keywords = {Intervention, Mixed reality, Optical see-through head-mounted display, User study},
-	pages = {901--910},
-	file = {Springer Full Text PDF:C\:\\Users\\anton\\Zotero\\storage\\LKLI8AKZ\\Qian et al. - 2017 - Comparison of optical see-through head-mounted dis.pdf:application/pdf}
+	  title={Comparison of optical see-through head-mounted displays for surgical interventions with object-anchored 2D-display},
+  author={Qian, Long and Barthel, Alexander and Johnson, Alex and Osgood, Greg and Kazanzides, Peter and Navab, Nassir and Fuerst, Bernhard},
+  journal={International journal of computer assisted radiology and surgery},
+  volume={12},
+  number={6},
+  pages={901--910},
+  year={2017},
+  publisher={Springer}
 }
 
 @article{khamene2003augmented,
@@ -1071,23 +989,14 @@ Conclusions  Mobile, real-time, and point-of-care AR for clinical purposes pro
 }
 
 @Article{Hansen2010,
-author="Hansen, Christian
-and Wieferich, Jan
-and Ritter, Felix
-and Rieder, Christian
-and Peitgen, Heinz-Otto",
-title="Illustrative visualization of 3D planning models for augmented reality in liver surgery",
-journal="International Journal of Computer Assisted Radiology and Surgery",
-year="2010",
-month="Mar",
-day="01",
-volume="5",
-number="2",
-pages="133--141",
-abstract="Augmented reality (AR) obtains increasing acceptance in the operating room. However, a meaningful augmentation of the surgical view with a 3D visualization of planning data which allows reliable comparisons of distances and spatial relations is still an open request.",
-issn="1861-6429",
-doi="10.1007/s11548-009-0365-3",
-url="https://doi.org/10.1007/s11548-009-0365-3"
+  title={Illustrative visualization of 3D planning models for augmented reality in liver surgery},
+  author={Hansen, Christian and Wieferich, Jan and Ritter, Felix and Rieder, Christian and Peitgen, Heinz-Otto},
+  journal={International journal of computer assisted radiology and surgery},
+  volume={5},
+  number={2},
+  pages={133--141},
+  year={2010},
+  publisher={Springer}
 }
 
 @inproceedings{devernay2001towards,
