--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1008,3 +1008,14 @@ Conclusions  Mobile, real-time, and point-of-care AR for clinical purposes pro
   organization={IEEE}
 }
 
+@article{fotouhi2019interactive,
+  title={Interactive Flying Frustums (IFFs): spatially aware surgical data visualization},
+  author={Fotouhi, Javad and Unberath, Mathias and Song, Tianyu and Gu, Wenhao and Johnson, Alex and Osgood, Greg and Armand, Mehran and Navab, Nassir},
+  journal={International journal of computer assisted radiology and surgery},
+  volume={14},
+  number={6},
+  pages={913--922},
+  year={2019},
+  publisher={Springer}
+}
+
