--- a/appendix.tex
+++ b/appendix.tex
@@ -8,4 +8,8 @@
 \label{appendix: b}
 \setboolean{@twoside}{false}
 \includepdf[pages=-, offset=75 -75]{EvaluationFragebogen.pdf}
+\chapter{Evaluation Fragebogen Antworten}
+\label{appendix: c}
+\setboolean{@twoside}{false}
+\includepdf[pages=-, offset=75 -75, angle = 90]{FragebogenAntworten.pdf}
 \end{appendices}
