--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1019,3 +1019,13 @@ Conclusions  Mobile, real-time, and point-of-care AR for clinical purposes pro
   publisher={Springer}
 }
 
+@article{hill2001medical,
+  title={Medical image registration},
+  author={Hill, Derek LG and Batchelor, Philipp G and Holden, Mark and Hawkes, David J},
+  journal={Physics in medicine \& biology},
+  volume={46},
+  number={3},
+  pages={R1},
+  year={2001},
+  publisher={IOP Publishing}
+}
